syntax="proto3";

package auth;

option go_package = "github.com/SagarMaheshwary/microservices-authentication-service/proto/auth";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  optional string image = 4;
  optional string created_at = 5;
  optional string updated_at = 6;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string message = 1;
  LoginResponseData data = 2;
}

message LoginResponseData {
  string token = 1;
  User user = 2;
}
